--- a/chapter10.tex
+++ b/chapter10.tex
@@ -1,10 +1,10 @@
 \cleardoublepage
 
-\chapter{Conclusions and future work}
+\chapter*{Conclusions and future work}
+\addcontentsline{toc}{chapter}{Introduction}
 \label{makereference10}
 
-\section{Conclusions}
-\label{makereference10.1}
+\section*{Conclusions}
 
 In conclusion, a cross-market battery optimization system has been successfully designed, developed, deployed, and validated across multiple installations on the iberian market. The system manages dozens of megawatt hours daily and generates millions of euros in expected annual revenue by cycling battery energy storage systems, as depicted in Figure~\ref{fig:arquitectura-sistema}, which satisfies the proposed main objective.
 
@@ -22,8 +22,7 @@ With this, energy arbitrage in the market has been enabled for the installations
 
 It is noteworthy that both battery energy storage systems and, therefore, cross-market battery optimization systems, are still in their infancy, at least in Europe. Precisely, according to a study on the use of storage technologies~\cite{hu2022potential}, ``the main energy storage system in Europe is still pumped hydroelectricity''. This means that, seeing how the landscape of electrical technologies is increasingly focusing on these battery technologies, it is likely that more sophisticated control systems will come to market. Although, currently, installations with battery energy storage systems are few and far between compared to the rest, market operators seek to incorporate them in all renewable installations to improve energy utilization. Therefore, while the implemented system has been successfully deployed throughout the country, it may be necessary to take new considerations in this regard and take into account said alternatives when the daily cycled energy might equal or exceed the amount of other wel -established energy assets'.
 
-\section{Future work}
-\label{makereference10.2}
+\section*{Future work}
 
 Regarding future work, \textsc{Optibat} is limited to arbitrage in the spot markets: daily, intraday, and continuous. However, there are other more or less profitable markets~\cite{cnmc2024balance}, such as the manual frequency restoration reserve and automatic frequency restoration reserve markets that trade availability. It would provide interesting adding support for such markets and complete the arbitrage profile of the battery storage technologies, as they are also ideal for the operation in said markets due to their high commutation capabilities.
 
