--- a/chapter9.tex
+++ b/chapter9.tex
@@ -1,6 +1,7 @@
 \cleardoublepage
 
-\chapter{Introduction}
+\chapter*{Introduction}
+\addcontentsline{toc}{chapter}{Introduction}
 \label{makereference9}
 
 The system behind the entirety of the electrical generation, transmission and distribution remains understandably completely transparent to the end users of said energy~\cite{garrues2009red}.
@@ -23,7 +24,7 @@ With this, the design decisions related to the integration of the system and the
 
 This way, the system is divided into the aforementioned sections. The operational infrastructure, explained in Chapter~\ref{makereference3}, manages the lowest level interaction layer available. The market environment, specified in Chapter~\ref{makereference4}, determines the information extracted from the regulatory institutions with which it communicates with. The structural modeling, detailed in Chapter~\ref{makereference5}, discusses the business logic of the decisions to be made. The command and control, specified in Chapter~\ref{makereference6}, explains the feedback loop to the physical assets and the interaction of market agents and telecommunications operators with the system. Finally, the carried out experiments are described in Chapter~\ref{makereference7}.
 
-\section{Objectives}
+\section*{Objectives}
 \label{makereference9.1}
 
 The main objective is the design, development, validation, and deployment (excluding experimentation) of a cross-market battery arbitrage system, guaranteeing its integration with the established infrastructure and enabling it to operate in the electricity market. It should be noted that, since battery energy storage technology is still in its early stages of development, there is no easily ready made or simple to implement solution on the existing energy infrastructure, although external efforts are in place to improve the situation. Therefore, establishing this foundation is the top priority.
@@ -50,7 +51,7 @@ In turn, several complementary secondary objectives are defined, detailed below.
 
 \end{description}
 
-\section{Scope}
+\section*{Scope}
 \label{makereference9.2}
 
 The project focuses exclusively on the development of a comprehensive, end to end battery cross-market battery optimization system. It is composed of the operational infrastructure with which to interact with the physical elements that are part of the system, the acquisition of market environment information through the corresponding regulatory institutions, the structural modeling of the battery cycling situation and of the entire installation for the resolution of optimality, and the command and control to transmit the results back to the battery and market and inform the market agents and telecommunications operators who supervise the movements made by the system.
@@ -61,7 +62,7 @@ Nor is the deployment of the central plant information system itself relevant to
 
 Finally, the project must consider external processes of the environment in which it is deployed, so there is no other option than to depend on the indirection layer of the market environment information storage (the data warehouse), on the breakdown of previously consulted traded positions given by internal services, and on the external market offer making process, which, for legal considerations, must be performed by the trusted party of the market operator that owns the energy assets.
 
-\section{Work plan}
+\section*{Work plan}
 \label{makereference9.3}
 
 The work plan consists distributes the project's development into multiple time indexed tasks. It is constituted by the division of the sections in accordance with the objectives and their explanation, from the beginning to the end of the work.
